# File-Sorter

./: CMakeLists.txt  ColorData.qml  ColorProperties.qml  CustomCheckBox.qml  CustomExplorer.qml  Main.qml  MainHeader.qml  README.md  SortSettings.qml  filedatahandler.cpp  filedatahandler.h  main.cpp
